--- a/pages/mandibula.html
+++ b/pages/mandibula.html
@@ -115,109 +115,109 @@
             <div class="row">
                 <div class="col-lg-6 col-xs-12 my-carousel" id="my-carousel">
                     <img
-                        src="../materials/mandibula/1.JPG"
+                        src="../materials/mandibula/1.jpg"
                         alt="1"
                         data-tooltip="1"
                         id="bone1"
                         class="thumbnail my-carousel-img active wrong-rotation">
                     <img
-                        src="../materials/mandibula/2.JPG"
+                        src="../materials/mandibula/2.jpg"
                         alt="2"
                         data-tooltip="2"
                         id="bone2"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/3.JPG"
+                        src="../materials/mandibula/3.jpg"
                         alt="3"
                         data-tooltip="3"
                         id="bone3"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/4.JPG"
+                        src="../materials/mandibula/4.jpg"
                         alt="4"
                         data-tooltip="4"
                         id="bone4"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/5.JPG"
+                        src="../materials/mandibula/5.jpg"
                         alt="5"
                         data-tooltip="5"
                         id="bone5"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/6.JPG"
+                        src="../materials/mandibula/6.jpg"
                         alt="6"
                         data-tooltip="6"
                         id="bone6"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/7.JPG"
+                        src="../materials/mandibula/7.jpg"
                         alt="7"
                         data-tooltip="7"
                         id="bone7"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/8.JPG"
+                        src="../materials/mandibula/8.jpg"
                         alt="8"
                         data-tooltip="8"
                         id="bone8"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/9.JPG"
+                        src="../materials/mandibula/9.jpg"
                         alt="9"
                         data-tooltip="9"
                         id="bone9"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/10.JPG"
+                        src="../materials/mandibula/10.jpg"
                         alt="10"
                         data-tooltip="10"
                         id="bone10"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/11.JPG"
+                        src="../materials/mandibula/11.jpg"
                         alt="11"
                         data-tooltip="11"
                         id="bone11"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/12.JPG"
+                        src="../materials/mandibula/12.jpg"
                         alt="12"
                         data-tooltip="12"
                         id="bone12"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/13.JPG"
+                        src="../materials/mandibula/13.jpg"
                         alt="13"
                         data-tooltip="13"
                         id="bone13"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/14.JPG"
+                        src="../materials/mandibula/14.jpg"
                         alt="14"
                         data-tooltip="14"
                         id="bone14"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/15.JPG"
+                        src="../materials/mandibula/15.jpg"
                         alt="15"
                         data-tooltip="15"
                         id="bone15"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/16.JPG"
+                        src="../materials/mandibula/16.jpg"
                         alt="16"
                         data-tooltip="16"
                         id="bone16"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/17.JPG"
+                        src="../materials/mandibula/17.jpg"
                         alt="17"
                         data-tooltip="17"
                         id="bone17"
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                     <img
-                        src="../materials/mandibula/18.JPG"
+                        src="../materials/mandibula/18.jpg"
                         alt="18"
                         data-tooltip="18"
                         id="bone18"
