--- a/pages/struma.html
+++ b/pages/struma.html
@@ -250,33 +250,17 @@
                         class="thumbnail my-carousel-img inactive wrong-rotation">
                 </div>
                 <div class="col-lg-6 col-xs-12">
-                    <h3>Lorem, ipsum.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        <br>
-                        Rerum harum fugiat suscipit atque mollitia sunt nulla tempora qui consectetur
-                        sint?</p>
-                    <h5>Lorem, ipsum dolor.</h5>
+                    <h3>Зоб</h3>
+                    <p>Под термином "зоб" понимают увеличение щитовидной железы, вызванное врожденными нарушениями 
+                        биосинтеза тиреоидного гормона, дефицитом йода в пище, зобогенными веществами.</p>
+                    <h5>Причины:</h5>
                     <ol>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maiores
-                            nihil unde, obcaecati consectetur rem!</li>
+                        <li>Врожденный дефект синтеза тиреоидного гормона приводит к развитию врожденного зоба. <br> 
+                            <u>Механизм</u>: Когда развивается недостаточность тиреоидного гормона, гипофиз усиливает секрецию тиротропина. 
+                            Последний стимулирует фолликулярный эпителий щитовидной железы, который в дальнейшем подвергается гиперплазии.</li>
+                        <li>Дефицит йода. <br> 
+                            <u>Механизм</u>: вызывает уменьшение концентрации тиреоидного гормона, увеличение секреции тиротропина и гиперплазию щитовидной железы.</li>
+                        <li>Зобогенные вещества (некоторые лекарства и пищевые продукты) влияют на продукцию тиреоидного гормона и таким образом вызывают развитие зоба.</li>
                     </ol>
                 </div>
             </div>
