--- a/pages/mandibula.html
+++ b/pages/mandibula.html
@@ -19,12 +19,17 @@
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"
+            defer
             ></script>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             crossorigin="anonymous"
+            defer
             ></script>
+            
+            <script src="../js/carousel.js" defer></script>
+        <script src="../js/zoom.js" defer></script>
 
         <link rel="stylesheet" href="../styles/page_styles.css">
 
@@ -247,8 +252,7 @@
         </div>
         <!-- container -->
 
-        <script src="../js/carousel.js"></script>
-        <script src="../js/zoom.js"></script>
+        
 
     </body>
 </html>
