--- a/pages/struma.html
+++ b/pages/struma.html
@@ -64,78 +64,78 @@
         <ul class="sidebar-topics" id="sidebar-topics">
             <li class="sidebar-topics-item">Атрофия
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Гидронефроз (1 вариант)</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Гидронефроз (2 вариант)</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Кистозные почки</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Буллезная эмфизема</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Гидронефроз (1 вариант)</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Гидронефроз (2 вариант)</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Кистозные почки</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Буллезная эмфизема</a></li>
                 </ul>
             </li>
             <li class="sidebar-topics-item">Болезни желудочно-кишечного тракта
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Хроническая язва желудка</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Хроническая язва желудка</a></li>
                 </ul>
             </li>
             <li class="sidebar-topics-item">Болезни костно-мышечной системы
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Остеохондроз крестца</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Остеохондроз позвоночника</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Остеохондроз крестца</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Остеохондроз позвоночника</a></li>
                 </ul>
             </li>
             <li class="sidebar-topics-item">Воспаление
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Фибринозный перикардит</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Казеозная пневмония</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Пневмосклероз</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Бронхопневмония</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Крупозная пневмония</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Милиарный туберкулез легких</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Гнойный менингит</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Цирроз печени</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Метастатический гнойный нефрит</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Флегмонозный аппендицит</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Гломерулонефрит</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Фибринозный перикардит</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Казеозная пневмония</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Пневмосклероз</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Бронхопневмония</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Крупозная пневмония</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Милиарный туберкулез легких</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Гнойный менингит</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Цирроз печени</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Метастатический гнойный нефрит</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Флегмонозный аппендицит</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Гломерулонефрит</a></li>
                 </ul>
             </li>
             <li class="sidebar-topics-item">Гипертрофия, гиперплазия, регенерация
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Гипертрофия миокарда</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Гипертрофия миокарда</a></li>
                 </ul>
             </li>
             <li class="sidebar-topics-item">Дистрофии
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="pages/struma.html">Зоб</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="pages/struma.html" class="sidebar-topics-item-list-link">Зоб</a></li>
                 </ul>
             </li>
             <li class="sidebar-topics-item">Некроз
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Гангрена пальцев рук</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Инфаркт миокарда</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Инфаркт легкого</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Гангрена пальцев рук</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Инфаркт миокарда</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Инфаркт легкого</a></li>
                 </ul>
             </li>
             <li class="sidebar-topics-item">Опухоли
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Рак пищевода</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Рак легких</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Рак кишки</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Рак желудка</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Метастатический рак печени</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Гипертрофия простаты</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Фибромиома матки</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Рак пищевода</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Рак легких</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Рак кишки</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Рак желудка</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Метастатический рак печени</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Гипертрофия простаты</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Фибромиома матки</a></li>
                 </ul>
             </li>
             <li class="sidebar-topics-item">Патология периферического кровообращения
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Венозная гиперемия печени</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Атеросклероз аорты</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Аневризма аорты</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Кровоизлияния в мозг</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Венозная гиперемия печени</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Атеросклероз аорты</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Аневризма аорты</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Кровоизлияния в мозг</a></li>
                 </ul>
             </li>
             <li class="sidebar-topics-item">Пороки сердечно-сосудистой системы
                 <ul class="sidebar-topics-item-list" hidden>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Порок сердца ревматический</a></li>
-                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#">Атеросклероз коронарных сосудов, аневризма сердца, пристеночный тромб</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Порок сердца ревматический</a></li>
+                    <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Атеросклероз коронарных сосудов, аневризма сердца, пристеночный тромб</a></li>
                 </ul>
             </li>    
         </ul>
