--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <link rel="stylesheet" href="style.css">
             <script src="js/script.js" defer></script>
 
-        <title>Document</title>
+        <title>3D-atlas</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -51,10 +51,12 @@
         <ul class="sidebar-topics" id="sidebar-topics">
             <li class="sidebar-topics-item">Атрофия
                 <ul class="sidebar-topics-item-list" hidden>
+                    
                     <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Гидронефроз (1 вариант)</a></li>
                     <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Гидронефроз (2 вариант)</a></li>
                     <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Кистозные почки</a></li>
                     <li class="sidebar-topics-item-list-elem sidebar-close"><a href="#" class="sidebar-topics-item-list-link">Буллезная эмфизема</a></li>
+                    
                 </ul>
             </li>
             <li class="sidebar-topics-item">Болезни желудочно-кишечного тракта
